uploaded updated version of index file
changed email field in the form to a type of "text" from a type of "email"

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <input type="text" id="lname" name="lastname" placeholder="Your Last Name" required>
         <br>
         <label for="email">Email Address</label><br>
-        <input type="email" id="email" placeholder="Your Email Address" required>
+        <input type="text" id="email" placeholder="Your Email Address" required>
         <br>
         <label for="message">Message</label><br>
         <textarea type="message" name="message" rows="10" placeholder="Your Message"></textarea>
